Адаптував секції сторінки "Студія"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header-nav">
           <a class="logo header__logo link" href="./index.html"
@@ -60,15 +60,15 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button" data-modal-open>
           Заказать услугу
         </button>
-      </section>
+      </section> -->
       <section class="section">
         <h2 class="section__title visually-hidden">Наши преимущества</h2>
         <ul class="advantages list container">
@@ -458,14 +458,14 @@
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="clients list">
-            <li>
+            <li class="clients__item">
               <a class="clients__link link" href="" aria-label="ya and co link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/sprite.svg#icon-logo-client1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link link"
                 href=""
@@ -476,14 +476,14 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link link" href="" aria-label="company link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/sprite.svg#icon-logo-client3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link link"
                 href=""
@@ -494,14 +494,14 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link link" href="" aria-label="brand link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/sprite.svg#icon-logo-client5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link link"
                 href=""
@@ -517,7 +517,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="footer__adress-container">
           <a class="footer__logo logo link" href="./index.html"
@@ -633,8 +633,8 @@
           </button>
         </form>
       </div>
-    </footer>
-    <div class="backdrop backdrop__is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop backdrop__is-hidden" data-modal>
       <div class="modal">
         <button class="data-close-modal-button" data-modal-close>
           <svg class="data-close-modal-button__icon" width="18" height="18">
@@ -693,8 +693,8 @@
           <button class="form__send-button" type="submit">Отправить</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
-    <script src="./js/footer.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
+    <!-- <script src="./js/footer.js"></script> -->
   </body>
 </html>
