--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
           </ul>
           <ul class="works list">
             <li class="works__item">
-              <a class="link" href="">
+              <a class="works__link link" href="">
                 <div class="overlay">
                   <picture>
                     <!-- desktop screen -->
