--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
           <a class="logo header__logo link" href="./index.html"
             >Web<span class="header__logo--accent">Studio</span></a
           >
+          <button class="menu-button button menu-button__is-open" type="button">
+            <svg
+              class="menu-button__icon-menu"
+              width="24"
+              height="16"
+              aria-label="переключатель мобильного меню"
+            >
+              <use
+                class="menu-button__icon-close-menu"
+                href="./images/sprite.svg#icon-close-mob-menu"
+              ></use>
+              <use
+                class="menu-button__icon-menu"
+                href="./images/sprite.svg#icon-menu"
+              ></use>
+            </svg>
+          </button>
           <ul class="main-nav list">
             <li>
               <a
@@ -731,100 +748,102 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__adress-container">
-          <a class="footer__logo logo link" href="./index.html"
-            >Web<span class="footer__logo--accent">Studio</span></a
-          >
-          <address>
-            <ul class="list address">
+        <div class="footer__thumb">
+          <div class="footer__adress-container">
+            <a class="footer__logo logo link" href="./index.html"
+              >Web<span class="footer__logo--accent">Studio</span></a
+            >
+            <address>
+              <ul class="list address">
+                <li>
+                  <a
+                    class="link address__googlmaps"
+                    href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
+                    target="_blank"
+                    rel="noopener nofollow noreferrer"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="link address__contacts"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="link address__contacts" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-join-container">
+            <h2 class="footer-join-container__title">присоединяйтесь</h2>
+            <ul class="social-link list">
               <li>
                 <a
-                  class="link address__googlmaps"
-                  href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
-                  target="_blank"
-                  rel="noopener nofollow noreferrer"
-                  >г. Киев, пр-т Леси Украинки, 26</a
+                  class="footer-join-container__link social-link__link link"
+                  href="#"
+                  aria-label="instagramm link"
                 >
+                  <svg
+                    class="footer-join-container__icon social-link__icon"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
               <li>
                 <a
-                  class="link address__contacts"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+                  class="footer-join-container__link social-link__link link"
+                  href="#"
+                  aria-label="twitter-link"
                 >
+                  <svg
+                    class="footer-join-container__icon social-link__icon"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a class="link address__contacts" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
+                <a
+                  class="footer-join-container__link social-link__link link"
+                  href="#"
+                  aria-label="facebook link"
                 >
+                  <svg
+                    class="footer-join-container__icon social-link__icon"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-join-container__link social-link__link link"
+                  href="#"
+                  aria-label="linkedin link"
+                >
+                  <svg
+                    class="footer-join-container__icon social-link__icon"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-join-container">
-          <h2 class="footer-join-container__title">присоединяйтесь</h2>
-          <ul class="social-link list">
-            <li>
-              <a
-                class="footer-join-container__link social-link__link link"
-                href="#"
-                aria-label="instagramm link"
-              >
-                <svg
-                  class="footer-join-container__icon social-link__icon"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-join-container__link social-link__link link"
-                href="#"
-                aria-label="twitter-link"
-              >
-                <svg
-                  class="footer-join-container__icon social-link__icon"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-join-container__link social-link__link link"
-                href="#"
-                aria-label="facebook link"
-              >
-                <svg
-                  class="footer-join-container__icon social-link__icon"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-join-container__link social-link__link link"
-                href="#"
-                aria-label="linkedin link"
-              >
-                <svg
-                  class="footer-join-container__icon social-link__icon"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <form class="subscribe-form footer__subscribe-form js-subscribe-form">
           <label class="subscribe-form__form-label">
