--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="logo header__logo link" href="./index.html"
             >Web<span class="header__logo--accent">Studio</span></a
           >
-          <button class="menu-button button menu-button__is-open" type="button">
+          <button class="menu-button button is-open" type="button">
             <svg
               class="menu-button__icon-menu"
               width="24"
