--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,23 @@
           <a class="logo header__logo link" href="./index.html"
             >Web<span class="header__logo--accent">Studio</span></a
           >
+          <button class="menu-button button is-open" type="button">
+            <svg
+              class="menu-button__icon-menu"
+              width="24"
+              height="16"
+              aria-label="переключатель мобильного меню"
+            >
+              <use
+                class="menu-button__icon-close-menu"
+                href="./images/sprite.svg#icon-close-mob-menu"
+              ></use>
+              <use
+                class="menu-button__icon-menu"
+                href="./images/sprite.svg#icon-menu"
+              ></use>
+            </svg>
+          </button>
           <ul class="main-nav list">
             <li>
               <a class="main-nav__link link" href="./index.html">Студия</a>
