пофіксив проблему з картинками

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-1.webp    1x,
-                    ./images/team/img_l-1@2x.webp 2x
+                    ./images/team/img_l@2x-1.webp 2x
                   "
                   type="image/webp"
                 />
@@ -320,7 +320,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-1.jpg    1x,
-                    ./images/team/img_l-1@2x.jpg 2x
+                    ./images/team/img_l@2x-1.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -329,7 +329,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-1.webp    1x,
-                    ./images/team/img_m-1@2x.webp 2x
+                    ./images/team/img_m@2x-1.webp 2x
                   "
                   type="image/webp"
                 />
@@ -337,7 +337,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-1.jpg    1x,
-                    ./images/team/img_m-1@2x.jpg 2x
+                    ./images/team/img_m@2x-1.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -346,7 +346,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-1.webp    1x,
-                    ./images/team/img_s-1@2x.webp 2x
+                    ./images/team/img_s@2x-1.webp 2x
                   "
                   type="image/webp"
                 />
@@ -354,7 +354,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-1.jpg    1x,
-                    ./images/team/img_s-1@2x.jpg 2x
+                    ./images/team/img_s@2x-1.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -437,7 +437,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-2.webp    1x,
-                    ./images/team/img_l-2@2x.webp 2x
+                    ./images/team/img_l@2x-2.webp 2x
                   "
                   type="image/webp"
                 />
@@ -445,7 +445,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-2.jpg    1x,
-                    ./images/team/img_l-2@2x.jpg 2x
+                    ./images/team/img_l@2x-2.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -454,7 +454,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-2.webp    1x,
-                    ./images/team/img_m-2@2x.webp 2x
+                    ./images/team/img_m@2x-2.webp 2x
                   "
                   type="image/webp"
                 />
@@ -462,7 +462,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-2.jpg    1x,
-                    ./images/team/img_m-2@2x.jpg 2x
+                    ./images/team/img_m@2x-2.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -471,7 +471,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-2.webp    1x,
-                    ./images/team/img_s-2@2x.webp 2x
+                    ./images/team/img_s@2x-2.webp 2x
                   "
                   type="image/webp"
                 />
@@ -479,7 +479,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-2.jpg    1x,
-                    ./images/team/img_s-2@2x.jpg 2x
+                    ./images/team/img_s@2x-2.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -562,7 +562,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-3.webp    1x,
-                    ./images/team/img_l-3@2x.webp 2x
+                    ./images/team/img_l@2x-3.webp 2x
                   "
                   type="image/webp"
                 />
@@ -570,7 +570,7 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/team/img_l-3.jpg    1x,
-                    ./images/team/img_l-3@2x.jpg 2x
+                    ./images/team/img_l@2x-3.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -579,7 +579,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-3.webp    1x,
-                    ./images/team/img_m-3@2x.webp 2x
+                    ./images/team/img_m@2x-3.webp 2x
                   "
                   type="image/webp"
                 />
@@ -587,7 +587,7 @@
                   media="(min-width: 768px)"
                   srcset="
                     ./images/team/img_m-3.jpg    1x,
-                    ./images/team/img_m-3@2x.jpg 2x
+                    ./images/team/img_m@2x-3.jpg 2x
                   "
                   type="image/jpg"
                 />
@@ -596,7 +596,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-3.webp    1x,
-                    ./images/team/img_s-3@2x.webp 2x
+                    ./images/team/img_s@2x-3.webp 2x
                   "
                   type="image/webp"
                 />
@@ -604,7 +604,7 @@
                   media="(max-width: 767px)"
                   srcset="
                     ./images/team/img_s-3.jpg    1x,
-                    ./images/team/img_s-3@2x.jpg 2x
+                    ./images/team/img_s@2x-3.jpg 2x
                   "
                   type="image/jpg"
                 />
