--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
           <a class="logo header__logo link" href="./index.html"
             >Web<span class="header__logo--accent">Studio</span></a
           >
-          <button class="menu-button button is-open" type="button">
+          <button class="menu-button button menu-button__is-open" type="button">
             <svg
               class="menu-button__icon-menu"
               width="24"
@@ -192,7 +192,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-1.webp    1x,
-                        ./images/portfolio/img_l-1@2x.webp 2x
+                        ./images/portfolio/img_l@2x-1.webp 2x
                       "
                       type="image/webp"
                     />
@@ -200,7 +200,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-1.jpg    1x,
-                        ./images/portfolio/img_l-1@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-1.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -209,7 +209,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-1.webp    1x,
-                        ./images/portfolio/img_m-1@2x.webp 2x
+                        ./images/portfolio/img_m@2x-1.webp 2x
                       "
                       type="image/webp"
                     />
@@ -217,7 +217,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-1.jpg    1x,
-                        ./images/portfolio/img_m-1@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-1.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -226,7 +226,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-1.webp    1x,
-                        ./images/portfolio/img_s-1@2x.webp 2x
+                        ./images/portfolio/img_s@2x-1.webp 2x
                       "
                       type="image/webp"
                     />
@@ -234,7 +234,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-1.jpg    1x,
-                        ./images/portfolio/img_s-1@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-1.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -265,7 +265,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-2.webp    1x,
-                        ./images/portfolio/img_l-2@2x.webp 2x
+                        ./images/portfolio/img_l@2x-2.webp 2x
                       "
                       type="image/webp"
                     />
@@ -273,7 +273,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-2.jpg    1x,
-                        ./images/portfolio/img_l-2@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-2.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -282,7 +282,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-2.webp    1x,
-                        ./images/portfolio/img_m-2@2x.webp 2x
+                        ./images/portfolio/img_m@2x-2.webp 2x
                       "
                       type="image/webp"
                     />
@@ -290,7 +290,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-2.jpg    1x,
-                        ./images/portfolio/img_m-2@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-2.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -299,7 +299,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-2.webp    1x,
-                        ./images/portfolio/img_s-2@2x.webp 2x
+                        ./images/portfolio/img_s@2x-2.webp 2x
                       "
                       type="image/webp"
                     />
@@ -307,7 +307,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-2.jpg    1x,
-                        ./images/portfolio/img_s-2@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-2.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -338,7 +338,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-3.webp    1x,
-                        ./images/portfolio/img_l-3@2x.webp 2x
+                        ./images/portfolio/img_l@2x-3.webp 2x
                       "
                       type="image/webp"
                     />
@@ -346,7 +346,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-3.jpg    1x,
-                        ./images/portfolio/img_l-3@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-3.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -355,7 +355,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-3.webp    1x,
-                        ./images/portfolio/img_m-3@2x.webp 2x
+                        ./images/portfolio/img_m@2x-3.webp 2x
                       "
                       type="image/webp"
                     />
@@ -363,7 +363,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-3.jpg    1x,
-                        ./images/portfolio/img_m-3@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-3.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -372,7 +372,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-3.webp    1x,
-                        ./images/portfolio/img_s-3@2x.webp 2x
+                        ./images/portfolio/img_s@2x-3.webp 2x
                       "
                       type="image/webp"
                     />
@@ -380,7 +380,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-3.jpg    1x,
-                        ./images/portfolio/img_s-3@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-3.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -411,7 +411,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-4.webp    1x,
-                        ./images/portfolio/img_l-4@2x.webp 2x
+                        ./images/portfolio/img_l@2x-4.webp 2x
                       "
                       type="image/webp"
                     />
@@ -419,7 +419,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-4.jpg    1x,
-                        ./images/portfolio/img_l-4@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-4.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -428,7 +428,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-4.webp    1x,
-                        ./images/portfolio/img_m-4@2x.webp 2x
+                        ./images/portfolio/img_m@2x-4.webp 2x
                       "
                       type="image/webp"
                     />
@@ -436,7 +436,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-4.jpg    1x,
-                        ./images/portfolio/img_m-4@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-4.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -445,7 +445,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-4.webp    1x,
-                        ./images/portfolio/img_s-4@2x.webp 2x
+                        ./images/portfolio/img_s@2x-4.webp 2x
                       "
                       type="image/webp"
                     />
@@ -453,7 +453,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-4.jpg    1x,
-                        ./images/portfolio/img_s-4@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-4.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -484,7 +484,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-5.webp    1x,
-                        ./images/portfolio/img_l-5@2x.webp 2x
+                        ./images/portfolio/img_l@2x-5.webp 2x
                       "
                       type="image/webp"
                     />
@@ -492,7 +492,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-5.jpg    1x,
-                        ./images/portfolio/img_l-5@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-5.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -501,7 +501,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-5.webp    1x,
-                        ./images/portfolio/img_m-5@2x.webp 2x
+                        ./images/portfolio/img_m@2x-5.webp 2x
                       "
                       type="image/webp"
                     />
@@ -509,7 +509,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-5.jpg    1x,
-                        ./images/portfolio/img_m-5@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-5.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -518,7 +518,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-5.webp    1x,
-                        ./images/portfolio/img_s-5@2x.webp 2x
+                        ./images/portfolio/img_s@2x-5.webp 2x
                       "
                       type="image/webp"
                     />
@@ -526,7 +526,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-5.jpg    1x,
-                        ./images/portfolio/img_s-5@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-5.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -557,7 +557,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-6.webp    1x,
-                        ./images/portfolio/img_l-6@2x.webp 2x
+                        ./images/portfolio/img_l@2x-6.webp 2x
                       "
                       type="image/webp"
                     />
@@ -565,7 +565,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-6.jpg    1x,
-                        ./images/portfolio/img_l-6@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-6.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -574,7 +574,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-6.webp    1x,
-                        ./images/portfolio/img_m-6@2x.webp 2x
+                        ./images/portfolio/img_m@2x-6.webp 2x
                       "
                       type="image/webp"
                     />
@@ -582,7 +582,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-6.jpg    1x,
-                        ./images/portfolio/img_m-6@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-6.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -591,7 +591,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-6.webp    1x,
-                        ./images/portfolio/img_s-6@2x.webp 2x
+                        ./images/portfolio/img_s@2x-6.webp 2x
                       "
                       type="image/webp"
                     />
@@ -599,7 +599,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-6.jpg    1x,
-                        ./images/portfolio/img_s-6@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-6.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -630,7 +630,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-7.webp    1x,
-                        ./images/portfolio/img_l-7@2x.webp 2x
+                        ./images/portfolio/img_l@2x-7.webp 2x
                       "
                       type="image/webp"
                     />
@@ -638,7 +638,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-7.jpg    1x,
-                        ./images/portfolio/img_l-7@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-7.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -647,7 +647,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-7.webp    1x,
-                        ./images/portfolio/img_m-7@2x.webp 2x
+                        ./images/portfolio/img_m@2x-7.webp 2x
                       "
                       type="image/webp"
                     />
@@ -655,7 +655,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-7.jpg    1x,
-                        ./images/portfolio/img_m-7@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-7.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -664,7 +664,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-7.webp    1x,
-                        ./images/portfolio/img_s-7@2x.webp 2x
+                        ./images/portfolio/img_s@2x-7.webp 2x
                       "
                       type="image/webp"
                     />
@@ -672,7 +672,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-7.jpg    1x,
-                        ./images/portfolio/img_s-7@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-7.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -703,7 +703,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-8.webp    1x,
-                        ./images/portfolio/img_l-8@2x.webp 2x
+                        ./images/portfolio/img_l@2x-8.webp 2x
                       "
                       type="image/webp"
                     />
@@ -711,7 +711,7 @@
                       media="(min-width: 1200px)"
                       srcset="
                         ./images/portfolio/img_l-8.jpg    1x,
-                        ./images/portfolio/img_l-8@2x.jpg 2x
+                        ./images/portfolio/img_l@2x-8.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -720,7 +720,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-8.webp    1x,
-                        ./images/portfolio/img_m-8@2x.webp 2x
+                        ./images/portfolio/img_m@2x-8.webp 2x
                       "
                       type="image/webp"
                     />
@@ -728,7 +728,7 @@
                       media="(min-width: 768px)"
                       srcset="
                         ./images/portfolio/img_m-8.jpg    1x,
-                        ./images/portfolio/img_m-8@2x.jpg 2x
+                        ./images/portfolio/img_m@2x-8.jpg 2x
                       "
                       type="image/jpg"
                     />
@@ -737,7 +737,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-8.webp    1x,
-                        ./images/portfolio/img_s-8@2x.webp 2x
+                        ./images/portfolio/img_s@2x-8.webp 2x
                       "
                       type="image/webp"
                     />
@@ -745,7 +745,7 @@
                       media="(max-width: 767px)"
                       srcset="
                         ./images/portfolio/img_s-8.jpg    1x,
-                        ./images/portfolio/img_s-8@2x.jpg 2x
+                        ./images/portfolio/img_s@2x-8.jpg 2x
                       "
                       type="image/jpg"
                     />
