--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
         </form>
       </div>
     </footer>
-    <!-- <div class="backdrop backdrop__is-hidden" data-modal>
+    <div class="backdrop backdrop__is-hidden" data-modal>
       <div class="modal">
         <button class="data-close-modal-button" data-modal-close>
           <svg class="data-close-modal-button__icon" width="18" height="18">
@@ -884,21 +884,36 @@
           >
           <div class="form-data-box">
             <label class="form-data-box__item">
-              <input class="form-data-box__input" type="text" name="name" />
+              <input
+                class="form-data-box__input"
+                type="text"
+                name="name"
+                placeholder=" "
+              />
               <span class="form-data-box__label">Имя</span>
               <svg class="form-data-box__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-person"></use>
               </svg>
             </label>
             <label class="form-data-box__item">
-              <input class="form-data-box__input" type="tel" name="tel" />
+              <input
+                class="form-data-box__input"
+                type="tel"
+                name="tel"
+                placeholder=" "
+              />
               <span class="form-data-box__label">Телефон</span>
               <svg class="form-data-box__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-phone"></use>
               </svg>
             </label>
             <label class="form-data-box__item">
-              <input class="form-data-box__input" type="email" name="mail" />
+              <input
+                class="form-data-box__input"
+                type="email"
+                name="mail"
+                placeholder=" "
+              />
               <span class="form-data-box__label">Почта</span>
               <svg class="form-data-box__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-email"></use>
@@ -930,9 +945,11 @@
           <button class="form__send-button" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    </div>
+
+    <script src="./js/body-padding.js"></script>
+    <script src="./js/modal.js"></script>
     <!-- <script src="./js/footer.js"></script> -->
-    <script src="./js/_mobile-menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
