работаю над моб меню

--- a/index.html
+++ b/index.html
@@ -42,9 +42,25 @@
               <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
             </svg>
           </button>
-
           <div class="menu-container" id="menu-container" data-menu>
             <p>контент</p>
+            <ul class="main-nav list">
+              <li>
+                <a
+                  class="main-nav__link main-nav__link--current link"
+                  href="./index.html"
+                  >Студия</a
+                >
+              </li>
+              <li>
+                <a class="main-nav__link link" href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li>
+                <a class="main-nav__link link" href="">Контакты</a>
+              </li>
+            </ul>
           </div>
           <ul class="main-nav list">
             <li>
