--- a/index.html
+++ b/index.html
@@ -16,74 +16,135 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
-  <body>
-    <header class="header">
+  <body id="page">
+    <header class="header" id="header">
       <div class="container header__container">
         <nav class="header-nav">
           <a class="logo header__logo link" href="./index.html"
             >Web<span class="header__logo--accent">Studio</span></a
           >
-          <button
-            class="menu-button is-open"
-            type="button"
-            aria-expanded="false"
-            aria-controls="menu-container"
-            data-menu-button
-          >
-            <svg
-              width="24"
-              height="16"
-              aria-label="переключатель мобильного меню"
-            >
-              <use
-                class="icon-close"
-                href="./images/sprite.svg#icon-close-mob-menu"
-              ></use>
-              <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
-            </svg>
-          </button>
-          <div class="menu-container" id="menu-container" data-menu>
-            <p>контент</p>
-            <ul class="main-nav list">
-              <li>
-                <a
-                  class="main-nav__link main-nav__link--current link"
-                  href="./index.html"
-                  >Студия</a
-                >
-              </li>
-              <li>
-                <a class="main-nav__link link" href="./portfolio.html"
-                  >Портфолио</a
-                >
-              </li>
-              <li>
-                <a class="main-nav__link link" href="">Контакты</a>
-              </li>
-            </ul>
-          </div>
           <ul class="main-nav list">
-            <li>
+            <li class="header__item">
               <a
                 class="main-nav__link main-nav__link--current link"
                 href="./index.html"
                 >Студия</a
               >
             </li>
-            <li>
+            <li class="header__item">
               <a class="main-nav__link link" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li>
+            <li class="header__item">
               <a class="main-nav__link link" href="">Контакты</a>
             </li>
           </ul>
+          <!-- mob-menu -->
+
+          <button class="menu-button" type="button" data-menu-open>
+            <svg
+              class="menu-button__icon"
+              width="40"
+              height="40"
+              aria-label="Кнопка закрытия мобильного меню"
+            >
+              <use
+                class="menu-button__open"
+                href="./images/sprite.svg#icon-open-mob-menu"
+              ></use>
+            </svg>
+          </button>
+          <div class="mobile-nav" data-menu>
+            <button class="mobile-nav__close" type="button" data-menu-close>
+              <svg
+                class="mobile-nav__icon"
+                width="40"
+                height="40"
+                aria-label="Кнопка открытия мобильного меню"
+              >
+                <use href="./images/sprite.svg#icon-close-mob-menu"></use>
+              </svg>
+            </button>
+            <ul class="mobile-menu list">
+              <li class="mobile-menu__item">
+                <a
+                  class="mobile-menu__link mobile-menu__link--active link"
+                  href="index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="mobile-menu__item">
+                <a class="mobile-menu__link link" href="portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mobile-menu__item">
+                <a class="mobile-menu__link link" href="#">Контакты</a>
+              </li>
+            </ul>
+            <div class="connection">
+              <ul class="mobile-contacts list">
+                <li class="mobile-contacts__item">
+                  <a class="mobile-contacts__link link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mobile-contacts__item">
+                  <a
+                    class="mobile-contacts__link link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mobile-social list">
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Instagram</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Twitter</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Facebook</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >LinkedIn</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- end-mob-menu -->
         </nav>
         <ul class="auth-nav list">
-          <li>
+          <li class="auth-nav__item list">
             <a class="auth-nav__link link" href="mailto:info@devstudio.com">
-              <svg class="auth-nav__icon-envelope" width="16" height="12">
+              <svg class="auth-nav__icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -91,7 +152,7 @@
           </li>
           <li>
             <a class="auth-nav__link link" href="tel:+380961111111">
-              <svg class="auth-nav__icon-smartphone" width="10" height="16">
+              <svg class="auth-nav__icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -887,6 +948,7 @@
         </form>
       </div>
     </footer>
+
     <div class="backdrop backdrop__is-hidden" data-modal>
       <div class="modal">
         <button class="data-close-modal-button" data-modal-close>
@@ -917,6 +979,7 @@
                 type="tel"
                 name="tel"
                 placeholder=" "
+                id="user-phone"
               />
               <span class="form-data-box__label">Телефон</span>
               <svg class="form-data-box__icon" width="18" height="18">
@@ -965,7 +1028,9 @@
 
     <script src="./js/body-padding.js"></script>
     <script src="./js/modal.js"></script>
-    <!-- <script src="./js/footer.js"></script> -->
+    <script src="https://unpkg.com/imask"></script>
+    <script src="./js/mask.js"></script>
+    <script src="./js/footer.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
