--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="shortcut icon" type="image/jpg" href="logo.jpg" />
+    <link rel="icon" type="image/jpg" sizes="16x16" href="/logo.jpg" />
   </head>
 
   <body id="page">
